--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "elkjs": "^0.7.1",
     "history": "^5.3.0",
     "json-stringify-pretty-compact": "^3.0.0",
-    "jsonc-parser": "^3.0.0",
+    "jsonc-parser": "^3.2.0",
     "lz-string": "^1.4.4",
     "monaco-editor": "^0.33.0",
     "prettier": "^2.7.x",
@@ -73,7 +73,8 @@
     "vega-schema-url-parser": "^2.2.0",
     "vega-themes": "^2.10.0",
     "vega-tooltip": "^0.28.0",
-    "vega-typings": "^0.22.3"
+    "vega-typings": "^0.22.3",
+    "vscode-json-languageservice": "^5.1.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
